mdix-go/internal/include/mdix_ffi.h

// Output format mode for mdix_to_mdix() and mdix_format_source().
enum MdixFormatMode {
    MDIX_FORMAT_MODE_DEFAULT = 0,
    MDIX_FORMAT_MODE_PRETTY = 1,
    MDIX_FORMAT_MODE_COMPACT = 2,
    MDIX_FORMAT_MODE_MINIFIED = 3,
};
typedef int32_t MdixFormatMode;
// Type discriminants returned by mdix_get_type().
// Values are stable — the C# MdixValueType enum MUST match exactly.
// Numeric types are contiguous: Int=2, Long=3, Float=4, Double=5.
enum MdixType {
    MDIX_TYPE_UNKNOWN = -1,
    MDIX_TYPE_NULL = 0,
    MDIX_TYPE_BOOL = 1,
    MDIX_TYPE_INT = 2,
    MDIX_TYPE_LONG = 3,
    MDIX_TYPE_FLOAT = 4,
    MDIX_TYPE_DOUBLE = 5,
    MDIX_TYPE_STRING = 6,
    MDIX_TYPE_DATE = 7,
    MDIX_TYPE_TIMESTAMP = 8,
    MDIX_TYPE_HEX_COLOR = 9,
    MDIX_TYPE_BLOB = 10,
    MDIX_TYPE_REGEX = 11,
    MDIX_TYPE_ARRAY = 12,
    MDIX_TYPE_OBJECT = 13,
    MDIX_TYPE_TUPLE = 14,
    MDIX_TYPE_ENUM = 15,
};
typedef int32_t MdixType;
// Free a handle created by any mdix_load* function.
// Passing null is safe. Do not call twice on the same pointer.
 void mdix_free(void *handle) ;
// Returns the MdixType discriminant for the value at path, or MdixType::Unknown
// if the path does not exist or the handle is null.
 MdixType mdix_get_type(const void *handle, const char *path) ;
// Free a C string returned by any mdix getter function.
// Do NOT call on the static pointer from mdix_version(). Passing null is safe.
 void mdix_free_string(char *s) ;
// Export the loaded data as .mdix source text.
// Caller must free with mdix_free_string().
//
// FIX: previously returned *mut c_void — corrected to *mut c_char.
 char *mdix_to_mdix(const void *handle, MdixFormatMode mode) ;
// Format .mdix source text according to the given mode.
// Minified mode removes all unnecessary whitespace.
// Compact mode collapses blank lines and strips trailing whitespace.
// Caller must free with mdix_free_string().
 char *mdix_format_source(const char *source, MdixFormatMode mode) ;
 int64_t mdix_builder_get_long(const void *builder, const char *path) ;
 float mdix_builder_get_float(const void *builder, const char *path) ;
 double mdix_builder_get_double(const void *builder, const char *path) ;
 bool mdix_builder_get_bool(const void *builder, const char *path) ;
// Serialize the builder's entries and write them to a .mdix file at path.
// Parent directories are created if they do not exist.
// Returns true on success.
 bool mdix_builder_save(const void *builder, const char *path) ;
// Serialize the builder's entries to a pretty-printed .mdix string.
// Caller must free with mdix_free_string().
 char *mdix_builder_to_string(const void *builder) ;
// Parse a JSON string and load it as a DixData handle.
// Caller must free with mdix_free when done.
 void *mdix_from_json(const char *source) ;
// Parse a TOML string and load it as a DixData handle.
// Caller must free with mdix_free when done.
 void *mdix_from_toml(const char *source) ;