ffi/builds/build_1236/MdixNative.cs


        [DllImport(__DllName, EntryPoint = "mdix_builder_get_long", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern long mdix_builder_get_long(void* builder, byte* path);

        [DllImport(__DllName, EntryPoint = "mdix_builder_get_float", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern float mdix_builder_get_float(void* builder, byte* path);

        [DllImport(__DllName, EntryPoint = "mdix_builder_get_double", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern double mdix_builder_get_double(void* builder, byte* path);

        [DllImport(__DllName, EntryPoint = "mdix_builder_get_bool", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool mdix_builder_get_bool(void* builder, byte* path);

        /// <summary>
        ///  Serialize the builder's entries and write them to a .mdix file at path.
        ///  Parent directories are created if they do not exist.
        ///  Returns true on success.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_builder_save", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool mdix_builder_save(void* builder, byte* path);

        /// <summary>
        ///  Serialize the builder's entries to a pretty-printed .mdix string.
        ///  Caller must free with mdix_free_string().
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_builder_to_string", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* mdix_builder_to_string(void* builder);

        /// <summary>
        ///  Parse a JSON string and load it as a DixData handle.
        ///  Caller must free with mdix_free when done.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_from_json", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void* mdix_from_json(byte* source);

        /// <summary>
        ///  Parse a TOML string and load it as a DixData handle.
        ///  Caller must free with mdix_free when done.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_from_toml", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void* mdix_from_toml(byte* source);


    }


    /// <summary>
    ///  Type discriminants returned by mdix_get_type().
    ///  Values are stable — the C# MdixValueType enum MUST match exactly.
    ///  Numeric types are contiguous: Int=2, Long=3, Float=4, Double=5.
    /// </summary>
    internal enum MdixType : int
    {
        Unknown = -1,
        Null = 0,
        Bool = 1,
        Int = 2,
        Long = 3,
        Float = 4,
        Double = 5,
        String = 6,
        Date = 7,
        Timestamp = 8,
        HexColor = 9,
        Blob = 10,
        Regex = 11,
        Array = 12,
        Object = 13,
        Tuple = 14,
        Enum = 15,
    }

    /// <summary>
    ///  Output format mode for mdix_to_mdix() and mdix_format_source().
    /// </summary>
    internal enum MdixFormatMode : int
    {
        Default = 0,
        Pretty = 1,
        Compact = 2,
        Minified = 3,
    }


}
